# RobotTank1

./: .gitignore  README.md  boot.sh  crontab.sample  entry_points.cfg  robottank_auto.py  start_ab.sh  start_auto.sh  start_bt8bitdozero2.sh  start_dc_server.sh  start_distance_server.sh  start_kbd.sh  start_mjpg-streamer.sh  start_server.sh
AbShutter/: README.md  entry_points.cfg  evdev-test1.py  setup.cfg
AbShutter/ab_shutter/: __init__.py  __main__.py  ab_shutter.py  test_ab_shutter.py  test_dc_mtr.py
Bt8BitDoZero2/: README.md  entry_points.cfg  getkey.py  js0test.py  sample1.py  setup.cfg  waitbtn.py
Bt8BitDoZero2/bt8bitdozero2/: __init__.py  __main__.py  bt8bitdozero2.py  robottank.py  test_bt8bitdozero2.py  test_robottank.py
BtKbd/: README.md  entry_points.cfg  setup.cfg
BtKbd/btkbd/: __init__.py  __main__.py  btkbd.py  test_robottank.py
BtSerial/: README.md  entry_points.cfg  setup.cfg  test1-svr.py
BtSerial/btserial/: __init__.py  __main__.py  btserial.py  btsersvr.py  test_btsersvr.py  test_btsvr.py  test_robottank.py
CmdClientServer/: README.md  entry_points.cfg  sample_client.py  sample_server.py  setup.cfg
CmdClientServer/cmdclientserver/: __init__.py  __main__.py  cmd_client.py  cmd_server.py
DcMtr/: README.md  entry_points.cfg  sample_dcmtr.py  sample_dcmtr_client.py  sample_dcmtr_n.py  setup.cfg  setup.cfg~
DcMtr/dc_mtr/: __init__.py  __main__.py  dc_mtr.py  dc_mtr_client.py  dc_mtr_n.py  dc_mtr_server.py  test_dc_mtr.py  test_dc_mtr_client.py  test_dc_mtr_n.py  test_dc_mtr_server.py
DcMtr/dc_mtr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DcMtr/dcmtr/: __init__.py  __main__.py  dc_mtr.py  dc_mtr_client.py  dc_mtr_n.py  dc_mtr_server.py  dcmtr.py  dcmtr_client.py  dcmtr_n.py  dcmtr_server.py  test_dc_mtr.py  test_dc_mtr_client.py  test_dc_mtr_n.py  test_dc_mtr_server.py
DistanceVL53L0X/: README.md  entry_points.cfg  sample_distance_client.py  sample_distanceclient.py  setup.cfg
DistanceVL53L0X/distancevl53l0x/: VL53L0X.py  VL53L0X.py-patch  VL53L0X_example.py  VL53L0X_example.py-patch  __init__.py  __main__.py  distance_client.py  distance_server.py  distancevl53l0x.py  robot_tank_auto.py  robottank_auto.py  test_distancevl53l0x.py  test_robottankauto.py  test_vl53l0x_client.py  test_vl53l0x_server.py  vl53l0x_client.py  vl53l0x_server.py
DistanceVL53L0X/tmp/: VL53L0X.py  VL53L0X_example.py
TcpClientServer/: README.md  entry_points.cfg  setup.cfg
TcpClientServer/tcpclientserver/: __init__.py  __main__.py  tcp_client.py  tcp_server.py
docs/: mjpg-streamer.md
pcb/01-rpi3a-hat/: OttoPi10-RPi3A-HAT.b#1  OttoPi10-RPi3A-HAT.brd  OttoPi10-RPi3A-HAT.sch
