[metadata]
name = ab_shutter
version = attr: ab_shutter.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = ab_shutter: AB Shutter 3
long_description = file: README.md
url = https://github.com/ytani01/RobotTank1.git
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    evdev
entry_points = file: entry_points.cfg
