[metadata]
name = bt8bitdozero2
version = attr: bt8bitdozero2.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = bt8bitdozero2: Bluetooth GamePad: 8BitDo zero 2
long_description = file: README.md
url = https://github.com/ytani01/RobotTank1.git
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    evdev
entry_points = file: entry_points.cfg
