[metadata]
name = dc_mtr
version = attr: dc_mtr.__version__
author = Yoichi Tanibayashi
author_email = yoichi@tanibayashi.jp
description = dc_mtr: DC Motor
long_description = file: README.md
url = https://github.com/ytani01/RobotTank1.git
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    
[options]
zip_safe = False
packages = find:
install_requires =
    click
    pigpio
entry_points = file: entry_points.cfg
